--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,11 @@ environment:
   matrix:
     - TARGET_ARCH: "x64"
       CONDA_INSTALL_LOCN: "C:\\Miniconda-x64"
+    - TARGET_ARCH: "x64"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda35-x64"
+    - TARGET_ARCH: "x64"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda36-x64"
+
 
 platform:
     - x64
@@ -19,4 +24,5 @@ build: off
 
 test_script:
     - python setup.py install
-    - pytest --cov splinart tests/
+    - cd tests
+    - pytest --cov splinart
