--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ install:
 
 script:
   - pytest --pylint --pylint-rcfile=.pyrcfile --pylint-error-types=EF splinart
-  - pytest --cov=splinart tests
+  - cd tests
+  - pytest --cov=splinart
 
 after_success:
   - codecov -e $PYVER
